build(dist): dist directory now builds normally

--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
     "qs": "^6.9.4",
     "react": "^16.13.1"
   },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
