--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,19 +5,22 @@
       "dom",
       "esnext"
     ],
+    "declaration": true,
     "allowJs": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "esModuleInterop": true,
+    "preserveConstEnums": true,
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "outDir": "dist"
   },
+  "exclude": [
+    "node_modules"
+  ],
   "include": [
     "src"
   ]
