--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dist/**/*"
   ],
   "scripts": {
+    "prepare": "install-peers",
     "dev": "webpack-dev-server --https",
     "test": "tsc --noEmit",
     "build": "gulp",
@@ -48,6 +49,7 @@
     "gulp-minify": "^3.1.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "husky": "^4.2.5",
+    "install-peers-cli": "^2.2.0",
     "lint-staged": "^10.2.2",
     "npm-run-all": "^4.1.5",
     "react-dom": "^16.13.1",
