--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "vkma-router",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "git@github.com:wolframdeus/vkma-router.git",
   "author": "Vladislav Kibenko <wolfram.deus@gmail.com>",
   "license": "MIT",
-  "keywords": ["vk-mini-apps", "routing", "vk", "vkma"],
+  "keywords": [
+    "vk-mini-apps",
+    "routing",
+    "vk",
+    "vkma"
+  ],
   "files": [
     "dist/**/*"
   ],
